# sam2-onnx-cpp

./: .gitignore  .gitmodules  README.md  fetch_sparse.bat  fetch_sparse.sh
cpp/: CMakeLists.txt  Info.plist.in
cpp/src/: ArtifactResolver.h  CVHelpers.h  Image.h  SAM2.cpp  SAM2.h  SAM2Image.cpp  SAM2Session.cpp  SAM2Session.h  SAM2Video.cpp  SAM2_Session.cpp  SAM2_Session.h  main.cpp  onnx_test_image.cpp  onnx_test_image_bounding_box.cpp  onnx_test_video.cpp  openFileDialog.cpp  openFileDialog.h  openFileDialog.mm
export/: onnx_export.py  onnx_test_image.py  onnx_test_image_bounding_box.py  onnx_test_image_seed_points.py  onnx_test_utils.py  onnx_test_video.py  onnx_test_video_bounding_box.py  onnx_test_video_seed_points.py
export/src/: modules.py  utils.py
python/: benchmark_onnx_variants.py  make_dml_compatible.py  onnx_test_image.py  onnx_test_utils.py  onnx_test_video.py  quantize_image_encoder.py  quantize_video_modules.py
